--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,3 @@
 eclipse.preferences.version=1
-encoding//css/base.css=UTF-8
+encoding//kabu_analysis/css/base.css=UTF-8
 encoding//shunkan_kioku/css/base.css=UTF-8
